# telegram-chan-scraper

./: .gitignore  api.json.dist  main.py  pyproject.toml
configs_dist/: memes.json
libs/: models.py
