[tool.poetry]
name = "untitled folder"
version = "0.1.0"
description = ""
authors = ["Sorokin Vadym <s57111702@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"
jupyter = "^1.0.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
